@@ -268,6 +268,19 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|index
+operator|.
+name|Terms
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|search
 operator|.
 name|Query
@@ -1470,6 +1483,68 @@ literal|true
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|boolean
+name|defaultPayloads
+init|=
+literal|true
+decl_stmt|;
+comment|//overwritten below
+try|try
+block|{
+comment|// It'd be nice to know if payloads are on the tokenStream but the presence of the attribute isn't a good
+comment|// indicator.
+specifier|final
+name|Terms
+name|terms
+init|=
+name|request
+operator|.
+name|getSearcher
+argument_list|()
+operator|.
+name|getLeafReader
+argument_list|()
+operator|.
+name|fields
+argument_list|()
+operator|.
+name|terms
+argument_list|(
+name|fieldName
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|terms
+operator|!=
+literal|null
+condition|)
+block|{
+name|defaultPayloads
+operator|=
+name|terms
+operator|.
+name|hasPayloads
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|log
+operator|.
+name|error
+argument_list|(
+literal|"Couldn't check for existence of payloads"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
 name|scorer
 operator|.
 name|setUsePayloads
@@ -1487,24 +1562,7 @@ name|HighlightParams
 operator|.
 name|PAYLOADS
 argument_list|,
-name|request
-operator|.
-name|getSearcher
-argument_list|()
-operator|.
-name|getLeafReader
-argument_list|()
-operator|.
-name|getFieldInfos
-argument_list|()
-operator|.
-name|fieldInfo
-argument_list|(
-name|fieldName
-argument_list|)
-operator|.
-name|hasPayloads
-argument_list|()
+name|defaultPayloads
 argument_list|)
 argument_list|)
 expr_stmt|;
